# realsense_gazebo_plugin

./: .travis.sh  .travis.yml  CMakeLists.txt  README.md  Readme.md  RealSensePlugin.cc  RealSensePlugin.hh  package.xml
include/realsense_gazebo_plugin/: RealSensePlugin.h  gazebo_ros_realsense.h
launch/: depth_proc.launch  realsense.launch  realsense_multiple_urdf.launch  realsense_urdf.launch  realsense_urdf_multilink.launch  two_realsense_chessboard.rviz  two_realsense_chessboard_gazebo_spawn.launch  two_realsense_chessboard_rviz.launch
models/chessboard2/: chessboard2.sdf  model.config
models/chessboard2/meshes/: chessboard2.dae
models/realsense_camera/: model.sdf
plugins/: RealSensePlugin.cc
src/: RealSensePlugin.cpp  gazebo_ros_realsense.cpp
test/: realsense_basic.test  realsense_plugin.cpp  realsense_streams_test.cpp
urdf/: chessboard_cameras_cell.urdf.xacro  multi_rs200_simulation.xacro  realsense-RS200.macro.xacro  rs200_simulation.xacro  rs200_simulation_multilink.xacro
worlds/: realsense.world
